--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "npm run generate && echo 'thelistofcompanies.com' > ./dist/CNAME && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^27.0.4",
     "postcss": "^8.2.8",
+    "push-dir": "^0.4.1",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
   }
