Add instructions for adding to the list

--- a/content/list.yaml
+++ b/content/list.yaml
@@ -1,3 +1,19 @@
+############################################
+#
+# Format:
+# - company: {company name}
+#   added: {date added to the list}
+#   url: {company website}
+#   snippet: {brief description of what the company does}
+#   
+# New companies should be added to the bottom.
+#
+# Open to adding new fields as long as the field can be added to most entries.
+#
+# Edits to this list should be supported by a link to the company's policy in the corresponding pull request, or the pull request should be made from a company email address.
+#
+############################################
+
 - company: Buffer
   added: June 15 2021
   url: https://buffer.com/
