Add more companies

--- a/content/list.yaml
+++ b/content/list.yaml
@@ -28,3 +28,18 @@
   added: June 15 2021
   url: https://www.voltathletics.com/
   snippet: The intelligent training platform - dedicated to enabling everyone to reach their health, fitness, and performance goals by combining best-in-class training with cutting-edge technology.
+
+- company: RealCrowd
+  added: June 17 2021
+  url: https://www.realcrowd.com
+  snippet: Real estate investing built for you
+
+- company: Standard Notes
+  added: June 17 2021
+  url: https://standardnotes.org
+  snippet: A safe place for your notes, thoughts, and life's work - a free, open-source, and completely encrypted notes app.
+
+- company: Nova
+  added: June 17 2021
+  url: https://createwithnova.com
+  snippet: The leader in social display - the most effective creative in every channel.
