--- a/content/list.yaml
+++ b/content/list.yaml
@@ -239,6 +239,13 @@
   basedIn: CA
   iconUrl: https://lime.health/img/favicon.png
   
+- company: BSB Design
+  added: June 26 2021
+  url: https://www.bsbdesign.com
+  snippet: To design the places where people want to live and spend their time... better.
+  basedIn: US
+  iconUrl: https://icons.duckduckgo.com/ip3/bsbdesign.com.ico
+  
 # - company:
 #   added:
 #   url:
