Update Standard Notes domain

--- a/content/list.yaml
+++ b/content/list.yaml
@@ -46,10 +46,10 @@
 
 - company: Standard Notes
   added: June 17 2021
-  url: https://standardnotes.org
+  url: https://standardnotes.com
   snippet: A safe place for your notes, thoughts, and life's work - a free, open-source, and completely encrypted notes app.
   basedIn: US
-  iconUrl: https://standardnotes.org/assets/icon.png
+  iconUrl: https://standardnotes.com/static/icon-d97ea19281985177f82aa27e9dbe5784.png
 
 - company: Nova
   added: June 17 2021
